# launch-terminal-rs

./: LICENSE  README.md  package-lock.json  package.json
lib/: Cargo.toml
lib/src/: lib.rs  terminal_linux.rs  terminal_macos.rs  terminal_windows.rs
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
