[package]
name = "launch_terminal"
version = "0.1.0"
edition = "2021"


[lib]
name = "launch_terminal"

[dependencies]
serde = { version = "1", features = ["derive"] }

[target.'cfg(target_os = "windows")'.dependencies]
shlex = "1"

[target.'cfg(target_os = "macos")'.dependencies]
once_cell = "1.21.3"